# OpenmpMacHelloworld

./: CMakeLists.txt  README.md  main.cpp
